--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
     <title>Homework 10</title>
   </head>
   <body>
+    <h1>Poland</h1>
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
+
 
     <script src="index.js" type="module"></script>
   </body>
