--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
+
+    <div class="js-card-container"></div>
   
     <script src="index.js" type="module"></script>
   </body>
